# metamorph

./: .gitignore  flake.nix  pyproject.toml
metamorph/: __init__.py  main.py  quilt.py
metamorph/model/: quilt.py
nix/: dev.nix  metamorph.nix  package.nix
